# Aether

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json
include/engine/: engine.hpp
playground/: CMakeLists.txt  main.cpp
res/: CMakeLists.txt
res/shaders/: shader.vert
src/: CMakeLists.txt
src/config/: config.hpp
src/ecs/componets/: Camera.hpp  renderable2D.hpp  transform.hpp
src/ecs/systems/: renderSystem.cpp  renderSystem.hpp  transformSystem.cpp  transformSystem.hpp
src/engine/: engine.cpp  engine.hpp  window.cpp  window.hpp
src/pch/: pch.hpp
src/renderer/: renderer.cpp  renderer.hpp  rendererCommon.hpp  vmaUsage.cpp  vulkanContext.cpp  vulkanContext.hpp  vulkanContextBuffer.cpp  vulkanContextFrame.cpp  vulkanContextInitialization.cpp  vulkanContextRenderPass.cpp  vulkanContextSwapChain.cpp  vulkanStructs.hpp  window.cpp  window.hpp
src/renderer/vulkan/: vulkanBuffer.cpp  vulkanBuffer.hpp  vulkanDescriptorManager.cpp  vulkanDescriptorManager.hpp  vulkanHelpers.cpp  vulkanHelpers.hpp
src/resources/: resourceLoader.cpp  resourceLoader.hpp
